Баг: рекомендованные фильмы возвращаются без жанров Причина: нет вызова loadGenres для списка рекоммендованных фильмов